[gd_scene load_steps=17 format=3 uid="uid://cu3nlq2e5c5nq"]

[ext_resource type="Script" path="res://scripts/buy_artifact_button.gd" id="1_nu7w7"]
[ext_resource type="Texture2D" uid="uid://bn6qi1s27kjlu" path="res://assets/menus/artifacts_sprites.svg" id="2_mhexv"]
[ext_resource type="FontFile" uid="uid://mi4u0u0ojq0d" path="res://assets/font/Space_Mono/SpaceMono-Bold.ttf" id="3_u6olb"]
[ext_resource type="FontFile" uid="uid://dt55moadn75gc" path="res://assets/font/Roboto_Mono/static/RobotoMono-Bold.ttf" id="4_bnv3t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dnujh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7fwlr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u3ekr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gf2bw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lgfde"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aenks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x2opb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_faj00"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7de5d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w5ofo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pje8a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mabjt"]
bg_color = Color(0.02, 0, 0, 0.768627)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.945604, 0.283797, 3.85046e-07, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="ArtifactButton" type="Control"]
custom_minimum_size = Vector2(200, 175)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1080.0
offset_bottom = -545.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nu7w7")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(75, 35)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_mhexv")
vframes = 10

[node name="ArtifactTitle" type="Label" parent="."]
custom_minimum_size = Vector2(175, 0)
layout_mode = 0
offset_left = 2.0
offset_top = 62.0
offset_right = 1472.0
offset_bottom = 363.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("3_u6olb")
theme_override_font_sizes/font_size = 125
text = "title here"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ArtifactTooltip" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 1.0
offset_top = 85.0
offset_right = 1491.0
offset_bottom = 505.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("3_u6olb")
theme_override_font_sizes/font_size = 100
text = "permanently stops something or idk"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ArtifactCost" type="Label" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 0
offset_left = 15.0
offset_top = 124.0
offset_right = 788.0
offset_bottom = 425.0
scale = Vector2(0.15, 0.15)
theme_override_fonts/font = ExtResource("3_u6olb")
theme_override_font_sizes/font_size = 100
text = "cost here"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="BuyButton" type="Button" parent="."]
z_index = 3
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 43.0
offset_top = 3.0
offset_right = 107.0
offset_bottom = 67.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_dnujh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7fwlr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_u3ekr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_gf2bw")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lgfde")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_aenks")
theme_override_styles/hover = SubResource("StyleBoxEmpty_x2opb")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_faj00")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7de5d")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_w5ofo")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pje8a")

[node name="BoughtLabel" type="Label" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 101.0
offset_right = 172.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.6353
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("4_bnv3t")
theme_override_font_sizes/font_size = 100
text = "BOUGHT"

[node name="Panel" type="Panel" parent="BoughtLabel"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mabjt")

[node name="TranformLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 138.0
offset_right = 615.0
offset_bottom = 303.0
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("4_bnv3t")
theme_override_font_sizes/font_size = 125
text = "xx -> xx"

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
